stop hover underlining flicker

--- a/source/projects/cocktails/stylesheets/project.scss
+++ b/source/projects/cocktails/stylesheets/project.scss
@@ -18,7 +18,7 @@
       text-decoration: underline;
     }
 
-    a:hover {
+    a:hover, a:hover * {
       text-decoration: none;
     }
 
